--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ apply from:"download.gradle"
 
 dependencies {
 
+    def lifecycle_version = "2.2.0"
+
+// LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
